# flask-boss

./: .gitignore
backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  commands.py  config.py  extensions.py
backend/app/models/: __init__.py  base.py  department.py  menu.py  post.py  role.py  user.py
backend/app/utils/: captcha.py  logger.py  parse_time.py  response.py
backend/app/views/: __init__.py  auth.py  user.py
backend/db/: init.sql
backend/tests/unit/: conftest.py  test_captcha.py  test_logger.py
frontend/: pnpm-lock.yaml
